# cmake-HC32F460

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
Core/Inc/: hc32f4xx_conf.h  main.h
Core/Src/: main.c  syscalls.c  system_hc32f460.c  system_hc32f460keua.c
Drivers/CMSIS/Device/HDSC/HC32F460/: LICENSE.txt
Drivers/CMSIS/Device/HDSC/HC32F460/Include/: hc32f460jcta.h  hc32f460jeta.h  hc32f460jeua.h  hc32f460kcta.h  hc32f460keta.h  hc32f460pctb.h  hc32f460pehb.h  hc32f460petb.h  hc32f4xx.h  system_hc32f460.h
Drivers/CMSIS/Device/HDSC/HC32F460/SVD/: HC32F460JCTA.svd  HC32F460JETA.svd  HC32F460JEUA.svd  HC32F460KCTA.svd  HC32F460KETA.svd  HC32F460PCTB.svd  HC32F460PEHB.svd  HC32F460PETB.svd
Drivers/CMSIS/Device/HDSC/HC32F460KEUA/Include/: hc32f460keua.h  hc32f4xx.h  system_hc32f460keua.h
Drivers/CMSIS/Device/HDSC/HC32F460KEUA/SVD/: HC32F460KEUA.svd
Drivers/HC32F460_DDL_Driver/: LICENSE.txt
Drivers/HC32F460_DDL_Driver/Inc/: hc32_ll.h  hc32_ll_adc.h  hc32_ll_aes.h  hc32_ll_aos.h  hc32_ll_can.h  hc32_ll_clk.h  hc32_ll_cmp.h  hc32_ll_crc.h  hc32_ll_dbgc.h  hc32_ll_dcu.h  hc32_ll_dma.h  hc32_ll_efm.h  hc32_ll_emb.h  hc32_ll_fcg.h  hc32_ll_fcm.h  hc32_ll_gpio.h  hc32_ll_hash.h  hc32_ll_i2s.h  hc32_ll_icg.h  hc32_ll_interrupts.h  hc32_ll_mpu.h  hc32_ll_ots.h  hc32_ll_pwc.h  hc32_ll_rmu.h  hc32_ll_rtc.h  hc32_ll_sram.h  hc32_ll_swdt.h  hc32_ll_tmr4.h  hc32_ll_tmr6.h  hc32_ll_tmra.h  hc32_ll_usart.h  hc32_ll_usb.h  hc32f460_ll_interrupts_share.h
Drivers/HC32F460_DDL_Driver/Src/: hc32_ll_adc.c  hc32_ll_aes.c  hc32_ll_can.c  hc32_ll_clk.c  hc32_ll_cmp.c  hc32_ll_crc.c  hc32_ll_dbgc.c  hc32_ll_dcu.c  hc32_ll_dma.c  hc32_ll_efm.c  hc32_ll_emb.c  hc32_ll_fcm.c  hc32_ll_gpio.c  hc32_ll_hash.c  hc32_ll_i2c.c  hc32_ll_i2s.c  hc32_ll_icg.c  hc32_ll_interrupts.c  hc32_ll_mpu.c  hc32_ll_ots.c  hc32_ll_pwc.c  hc32_ll_rmu.c  hc32_ll_rtc.c  hc32_ll_sdioc.c  hc32_ll_spi.c  hc32_ll_sram.c  hc32_ll_swdt.c  hc32_ll_tmr0.c  hc32_ll_tmr4.c  hc32_ll_tmr6.c  hc32_ll_tmra.c  hc32_ll_usart.c  hc32_ll_usb.c  hc32f460_ll_interrupts_share.c
Platform/: HC32F460_RAM.ld  HC32F460xC.ld  HC32F460xE.ld  startup_hc32f460.S
cmake/: gcc-arm-none-eabi.cmake
cmake/hc32ddl/: CMakeLists.txt
